--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "What Hacker News Says (Inline)",
+  "name": "Inline Hacker News Comments",
   "version": "0.2.0",
-  "description": "Easily find Hacker News threads about the page you're currently browsing, and view comments inline",
+  "description": "view Hacker News comments inline",
   "homepage_url": "https://github.com/philrhc/what-hn-says-inline",
   "icons": {
     "16": "assets/icon-16.png",
